<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.nativetest.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/notification_setting"/>

    <com.example.nativetest.widget.SettingItemView
        android:id="@+id/siv_no_disturb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_content="@string/no_disturb" />
    <com.example.nativetest.widget.SettingItemView
        android:id="@+id/siv_show_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_content="@string/show_noti_detail" />

    <View
        android:layout_margin="12dp"
        style="@style/lineStyle"/>

    <com.example.nativetest.widget.SettingItemView
        android:id="@+id/siv_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_content="@string/sound" />
    <com.example.nativetest.widget.SettingItemView
        android:id="@+id/siv_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_content="@string/vibrate" />

</LinearLayout>