<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.nativetest.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_company_contact" />

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:background="@drawable/gray_4dp_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textColor="#65666C"
            android:text="@string/company_email"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_alignParentEnd="true"
            android:text="@string/copy_email"
            android:id="@+id/tv_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black_text"/>


    </RelativeLayout>
</LinearLayout>